--- a/app/views/home/_query_list.html.erb
+++ b/app/views/home/_query_list.html.erb
@@ -2,7 +2,7 @@
 <div >
     <div class = "scrolling-list clear">
       <% if @events != [] && @events != nil %>
-        <table class="table table-hover">
+        <table class="table table-hover table-condensed">
           <tr>
             <th>Date</th> <th>Disease</th> <th>Number Infected</th> <th>Location</th> <th>Map</th>
           </tr>
