styling scroll div to constrain size

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,3 +84,9 @@
   padding-bottom: 25px;
   margin-bottom: 25px;
 }
+
+.scrolling-list {
+  margin: 20px 100px;
+  border-width: 5px;
+  border-color: #2D3440;
+}
