--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -49,7 +49,7 @@
 </ul>
 </div>
 
-<div id="query-choices">
+<!-- <div id="query-choices">
   <ul id="list-of-choices" style="list-style-type:none; float: left">
     <li>Query Choices: </li>
     <li><%= @outbreaks.collect{|x| Outbreak.find(x).title} + @diseases.collect{|x| MedicalCondition.find(x).name} +
@@ -57,4 +57,4 @@
             <%= @end_date.strftime("%b %d, %Y")%></li>
   </ul>
 
-</div>
+</div> -->
