--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -18,11 +18,9 @@
 
 #query-box {
   display: block;
-  background-color: navy;
-  color: white;
+  background-color: #2D3440;
+  color: #FFBB34;
   height: 30px;
-  border: solid black;
-
 }
 
 .query-form {
@@ -41,7 +39,7 @@ a.menu-item {
   display: inline-block;
   margin-left: 10px;
   float: left;
-  color: white
+  color: #FFBB34;
 }
 
 a.location-marker {
@@ -50,11 +48,11 @@ a.location-marker {
 
 .white-link {
   display: inline-block;
-  color: white;
+  color: #FFBB34;
   padding-left: 5px;
   float: left;
 
 }
 a:hover {
-  color: red;
+  color: #ffee89;
 }
