--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -11,7 +11,7 @@
   <a class="menu-item" id="graph-trigger">See Graph</a>
 </div>
 
-<div id="outbreak-query-box" class="query-form" style="display: none" >
+<div id="outbreak-query-box" class="query-form" >
   <%= form_tag query_path, method:"get" do %>
   <ul>
     <li>
