adding mobile responsive styling to scroll table

--- a/app/views/home/_query_list.html.erb
+++ b/app/views/home/_query_list.html.erb
@@ -1,6 +1,6 @@
 
 <div >
-    <div class = "scrolling-list clear">
+    <div class = "scrolling-list clear cols-xs-12 cols-md-8">
       <% if @events != [] && @events != nil %>
         <table class="table table-hover table-condensed place-marker">
           <tr>
