graph adjusts to fit window width for small screens

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,12 +51,16 @@
         // }
         //
         // data.addRows(table.slice(1,-1));
-
+        var wWidth = $(window).width();
+        var gWidth = 500;
+        if (wWidth < 500) {
+          gWidth = wWidth;
+        }
         var options = {
           enableInteractivity: true,
           legend: {position: 'top', maxLines: 3},
           title: 'Outbreaks Over Time',
-          width: 500,
+          width: gWidth,
           height: 350,
           colors: ["#FFBB34", "#CC2B15", "#15CC73", "#33517F", "#66A3FF", "#9E2BD4"],
           hAxis: {format: 'MMM d, yyyy', gridlines: {count: 20}, minValue: new Date("01/01/1979")},
