renamed query events toggle query form

--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -4,7 +4,7 @@
   <a href="#" class="menu-item">|</a>
   <a href="#" class="clear-markers menu-item">Clear Markers</a>
   <a href="#" class="menu-item">|</a>
-  <a href="#" class="menu-item" id="select-outbreak">Query Events</a>
+  <a href="#" class="menu-item" id="select-outbreak">Toggle Query Form</a>
   <a href="#" class="menu-item">|</a>
   <a href="/" class="menu-item">Reset Query</a>
   <a href="#" class="menu-item">|</a>
