adjusted styling of query box bar to be mobile-friendly

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -20,7 +20,6 @@
   display: block;
   background-color: #2D3440;
   color: #FFBB34;
-  height: 30px;
 }
 
 .query-form {
@@ -38,7 +37,7 @@
 a.menu-item {
   display: inline-block;
   margin-left: 10px;
-  float: left;
+  // float: left;
   color: #FFBB34;
 }
 
