--- a/app/views/home/_query_list.html.erb
+++ b/app/views/home/_query_list.html.erb
@@ -1,6 +1,6 @@
 
-<div >
-    <div class = "scrolling-list clear cols-xs-12 cols-md-8">
+<div class="col-xs-12 scroll-background">
+    <div class="scrolling-list clear col-xs-12 col-sm-10 col-sm-offset-1">
       <% if @events != [] && @events != nil %>
         <table class="table table-hover table-condensed place-marker">
           <tr>
