--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,10 +9,11 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel"><%= MedicalCondition.find()name %></h4>
+        <h4 class="modal-title" id="myModalLabel"><%= %></h4>
       </div>
       <div class="modal-body">
-        ...
+        <%= disease.codes.where() %>
+        <%= disease.description %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
