--- a/app/views/home/_query_list.html.erb
+++ b/app/views/home/_query_list.html.erb
@@ -1,25 +1,32 @@
 
 <div class="col-xs-12 scroll-background">
-    <div class="scrolling-list clear col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="scrolling-list clear col-xs-12  col-sm-12 ">
       <% if @events != [] && @events != nil %>
         <table class="table table-hover table-condensed place-marker">
-          <tr>
-            <th>Date</th> <th>Disease</th> <th>Number Infected</th> <th>Location</th>
-          </tr>
-          <% @events.each do |event| %>
-            <tr class="location-marker" data-event-id=<%="#{event.id}"%>
-                  data-disease=<%="#{event.disease.gsub(" ", "_")}"%>
-                  data-latitude=<%="#{event.latitude}"%>
-                  data-longitude=<%= "#{event.longitude}" %>
-                  data-location=<%= "#{event.geo.name.gsub(" ", "_")}" %>
-                  data-date=<%= "#{event.date}" %>
-                  data-number-infected=<%= "#{event.number_infected}" %>>
-              <td> <%= event.date.strftime("%m-%d-%Y") %> </td>
-              <td> <%= event.disease %> </td>
-              <td> <%= event.number_infected %> </td>
-              <td> <%= event.location %>, <%= event.state %> </td>
+          <thead>
+
+            <tr>
+              <th>Date</th> <th>Disease</th> <th>Number Infected</th> <th>Location</th>
             </tr>
-          <% end %>
+          </thead>
+          <tbody>
+
+            <% @events.each do |event| %>
+              <tr class="location-marker" data-event-id=<%="#{event.id}"%>
+                    data-disease=<%="#{event.disease.gsub(" ", "_")}"%>
+                    data-latitude=<%="#{event.latitude}"%>
+                    data-longitude=<%= "#{event.longitude}" %>
+                    data-location=<%= "#{event.geo.name.gsub(" ", "_")}" %>
+                    data-date=<%= "#{event.date}" %>
+                    data-number-infected=<%= "#{event.number_infected}" %>>
+                <td> <%= event.date.strftime("%m-%d-%Y") %> </td>
+                <td> <%= event.disease %> </td>
+                <td> <%= event.number_infected %> </td>
+                <td> <%= event.location %>, <%= event.state %> </td>
+              </tr>
+            <% end %>
+
+          </tbody>
         </table>
       <% else %>
         <h2>No Events Found For This Query</h2>
