toggled the menu choices and hid form for a clean display

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -10,24 +10,24 @@
   background: yellow;
 }
 
-#query-box {
-  display: block;
-  background-color: #2D3440;
-  color: #FFBB34;
-  padding: 2px;
-}
-
-.query-form {
-  width: 100%;
-  z-index: 3;
-  clear: both;
-  // margin-left: 1%;
-  // margin-right: 1%;
-  // margin-top: 3px;
-  background-color: white;
-  color: black;
-
-}
+// #query-box {
+//   display: block;
+//   background-color: #2D3440;
+//   color: #FFBB34;
+//   padding: 2px;
+// }
+//
+// .query-form {
+//   width: 100%;
+//   z-index: 3;
+//   clear: both;
+//   // margin-left: 1%;
+//   // margin-right: 1%;
+//   // margin-top: 3px;
+//   background-color: white;
+//   color: black;
+//
+// }
 
 a.menu-item {
   display: inline-block;
