--- a/app/assets/stylesheets/query.css.scss
+++ b/app/assets/stylesheets/query.css.scss
@@ -1,6 +1,6 @@
 .query-nav-bar {
   display: block;
-  background-color: #2D3440;
+  background-color: black;
   color: #FFBB34;
   padding: 2px;
 }
@@ -18,37 +18,32 @@
 
 }
 
-.ui-datepicker-month, .ui-datepicker-year {
-  color: black;
-}
+
+
 
 
 #outbreak-query-box.query-form  ul {
   display: block;
-  margin: 2px;
+  margin: 0;
+  padding-top: 10px;
   background-color: #f89022;
   list-style-type: none;
   width: 100%;
+  text-align: center;
   li {
     display: inline-block;
+    margin: 0 5px 0 5px
   }
-
 }
-
-
-
 
 .submit-query {
   background-color: green;
   color: white;
 }
-#outbreak-query-box input, select {
-  font-size: 1em;
-}
 
 #outbreak-query-box input {
   border: .1em solid black;
-  border-radius: 13px;
+  border-radius: 7px;
   text-align: center;
 }
 
@@ -56,11 +51,14 @@
   border: solid black .1em;
 }
 
+#outbreak-query-box {
+  display: hidden;
+}
+
 .scrolling-list {
   display: block;
   width: 90%;
   height: 300px;
-  // border: solid green;
   overflow: scroll;
   background-color: white;
   padding: 20px;
