--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -1,22 +1,22 @@
 
 
 
-<div class="query-nav-bar">
+<div class="query-nav-bar" >
   <ul style="list-style-none">
     <li><a href="#" class="auto-mark menu-item">Mark All Events</a></li>
     <li style="color: #f89022">|</li>
     <li><a href="#" class="clear-markers menu-item">Clear Marks</a></li>
     <li style="color: #f89022">|</li>
-    <li><a href="#" class="menu-item" id="select-outbreak">Toggle Query Form</a></li>
+    <li><a href="#" class="menu-item" id="select-outbreak"><span id="createq">Create a Query</span><span id="hideq" style="display:none">Hide Query Fields</span></a></li>
     <li style="color: #f89022">|</li>
     <li><a href="/" class="menu-item">Reset Query</a></li>
     <li style="color: #f89022">|</li>
-    <li><a class="menu-item" id="graph-trigger">See Graph</a></li>
+    <li><a class="menu-item" id="graph-trigger"><span id="createg">See Graph</span><span id="hideg" style="display:none">Hide Graph</span></a></li>
 
   </ul>
 </div>
 
-<div id="outbreak-query-box" class="query-form" >
+<div id="outbreak-query-box" class="query-form" style="display: none"  >
   <%= form_tag query_path, method:"get" do %>
   <ul>
     <li>
