--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,7 +4,7 @@
   // border: solid green;
   overflow: scroll;
   background-color: white;
-  margin: 20px 0;
+  margin-top: 20px;
   border-width: 5px;
   border-color: #2D3440;
 }
@@ -39,7 +39,6 @@
   // margin-top: 3px;
   background-color: white;
   color: black;
-
 }
 
 a.menu-item {
@@ -62,4 +61,9 @@ a.location-marker {
 }
 a:hover {
   color: #ffee89;
+}
+
+#query-records {
+  overflow: scroll;
+  height: 150px;
 }
