added button to delete a query record

--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -93,6 +93,9 @@
     <li>
       <a href="#" class="btn btn-default" id="update-query-record", data-url= <%= "/query_records/#{session[:query_id]}" %> >Update Query Record</a>
     </li>
+    <li>
+      <a href="#" class="btn btn-default" id="delete-query-record", data-url= <%= "/query_records/#{session[:query_id]}" %> >Delete Query Record</a>
+    </li>
     <% end %>
   </ul>
 </div>
