--- a/app/assets/stylesheets/query.css.scss
+++ b/app/assets/stylesheets/query.css.scss
@@ -3,6 +3,7 @@
   background-color: black;
   color: #FFBB34;
   padding: 2px;
+  margin: 0;
 }
 
 .query-nav-bar ul {
@@ -13,8 +14,18 @@
 .query-nav-bar li {
   display: inline-block;
   position: center;
-  padding: 5px 10px 0 10px;
+  // padding: 3px 10px 3px 10px;
   font-size: 1em
+
+}
+
+#query-records {
+  // display: block;
+  background-color: white;
+  width: 90%;
+  margin: 0 5% 0 5%;
+  border: 12px solid #f89022;
+  background-color: white;
 
 }
 
@@ -25,7 +36,8 @@
 #outbreak-query-box.query-form  ul {
   display: block;
   margin: 0;
-  padding-top: 10px;
+
+  padding: 10px;
   background-color: #f89022;
   list-style-type: none;
   width: 100%;
@@ -52,7 +64,7 @@
 }
 
 #outbreak-query-box {
-  display: hidden;
+
 }
 
 .scrolling-list {
@@ -64,7 +76,7 @@
   padding: 20px;
   margin: 5%;
   margin-top: 10px;
-  border-width: 5px;
+  // border-width: 5px;
   border-color: #2D3440;
 }
 
