--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -16,12 +16,15 @@
   </ul>
 </div>
 
-<!-- <div id="outbreak-query-box" class="query-form" style="display: none"  >
-  <%#= form_tag query_path, method:"get" do %> -->
+
+
+
+<div id="big-query-box" style="background-color: #f89022">
+
 
 
 <% if @user %>
-  <div class="collapse col-xs-12" id="query-records" >
+  <div class="collapse " id="query-records"  >
     <% if @user.query_records.length > 0 %>
       <table class="table table-hover table-condensed col-sm-10 col-sm-1-offset">
         <tr>
@@ -44,10 +47,9 @@
   </div>
 <% end %>
 
-<div id="outbreak-query-box" class="query-form col-xs-12" >
-  <%= form_tag query_path, method:"get", id: "query-form" do %>
 
-
+<div id="outbreak-query-box" class="query-form" style="display: none"  >
+  <%= form_tag query_path, method:"get" do %>
 
   <ul>
     <li>
@@ -95,4 +97,7 @@
     </li>
     <% end %>
   </ul>
+</div>
+
+
 </div>
