--- a/app/assets/stylesheets/query.css.scss
+++ b/app/assets/stylesheets/query.css.scss
@@ -20,7 +20,7 @@
 }
 
 #query-records {
-  // display: block;
+  display: none;
   background-color: white;
   width: 90%;
   margin: 0 5% 0 5%;
@@ -51,6 +51,8 @@
 .submit-query {
   background-color: green;
   color: white;
+  border-radius: 15px;
+  padding: 2px;
 }
 
 #outbreak-query-box input {
