--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -25,16 +25,20 @@
     <% if @user.query_records.length > 0 %>
       <table class="table table-hover table-condensed col-sm-10 col-sm-1-offset">
         <tr>
-          <th>Date of Query</th> <th>Outbreak</th> <th>Disease</th> <th>Location</th> <th>Start Date</th> <th>End Date</th>
+          <th>Date of Query</th> <th>Outbreak</th> <th>Disease</th> <th>Location</th> <th>Start Date</th> <th>End Date</th> <th>Options</th>
         </tr>
         <% @user.query_records.sort_by{ |qr| qr.created_at }.reverse.each do |qr| %>
-          <tr>
+          <tr class="query-record-link <%= "high-light-row" if qr.id == session[:query_id] %>">
             <td> <%= qr.created_at.strftime("%b %d, %Y") %> </td>
             <td> <%= Outbreak.find(qr.outbreak_id).title %> </td>
             <td> <%= MedicalCondition.find(qr.disease_id).name %> </td>
             <td> <%= Place.find(qr.place_id).name %> </td>
             <td> <%= qr.start_date.strftime("%m-%d-%Y") if qr.start_date %> </td>
             <td> <%= qr.end_date.strftime("%m-%d-%Y") if qr.end_date %> </td>
+            <td>
+              <a href="http://localhost:3000/query?utf8=%E2%9C%93&outbreak_id=<%= qr.outbreak_id.to_s %>&disease_id=<%= qr.disease_id.to_s %>&place_id=<%= qr.place_id.to_s %>&start_date=<%= qr.start_date.to_s %>&end_date=<%= qr.end_date.to_s %>&commit=<%= qr.id %>#">View Query</a> |
+              <a href="#" id="delete-query-record", data-url= <%= "/query_records/#{qr.id}" %> >Delete Query</a>
+            </td>
           </tr>
         <% end %>
       </table>
@@ -90,12 +94,9 @@
     </li>
     <% end %>
     <% if session[:query_id] %>
-    <li>
-      <a href="#" class="btn btn-default" id="update-query-record", data-url= <%= "/query_records/#{session[:query_id]}" %> >Update Query Record</a>
-    </li>
-    <li>
-      <a href="#" class="btn btn-default" id="delete-query-record", data-url= <%= "/query_records/#{session[:query_id]}" %> >Delete Query Record</a>
-    </li>
+      <li>
+        <a href="#" class="btn btn-default" id="update-query-record", data-url= <%= "/query_records/#{session[:query_id]}" %> >Update Query Record</a>
+      </li>
     <% end %>
   </ul>
 </div>
