removed boundary from submit new query button

--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -81,7 +81,7 @@
       <input type="text" name="end_date" placeholder="..... End Date" id="enddatepicker"></p>
     </li>
     <li>
-    <button href="#" class="submit-query"> <%= submit_tag "Submit New Query", class: "submit-query"%> </button>
+    <button href="#" class="submit-query"> <%= submit_tag "Submit New Query", style: "border: none", class: "submit-query"%> </button>
   </li>
   <% end %>
 
