made all oranges the same value

--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -19,7 +19,7 @@
 
 
 
-<div id="big-query-box" style="background-color: #f89022">
+<div id="big-query-box" style="background-color: #FFBB34">
 
 
 
