--- a/app/assets/stylesheets/query.css.scss
+++ b/app/assets/stylesheets/query.css.scss
@@ -24,7 +24,7 @@
   background-color: white;
   width: 90%;
   margin: 0 5% 0 5%;
-  border: 12px solid #f89022;
+  border: 12px solid #FFBB34;
   background-color: white;
 
 }
@@ -40,7 +40,7 @@
   margin: 0;
 
   padding: 10px;
-  background-color: #f89022;
+  background-color: #FFBB34;
   list-style-type: none;
   width: 100%;
   text-align: center;
@@ -55,6 +55,10 @@
   color: white;
   border-radius: 15px;
   padding: 2px;
+}
+
+.submit-query:hover {
+  color: #ffee89;
 }
 
 #outbreak-query-box input {
