menu item link taken out to prevent unfortunate page jumps

--- a/app/views/home/_query_box.html.erb
+++ b/app/views/home/_query_box.html.erb
@@ -4,7 +4,7 @@
     <li style="color: #f89022">|</li>
     <li><a href="#" class="clear-markers menu-item">Clear Marks</a></li>
     <li style="color: #f89022">|</li>
-    <li><a href="#" class="menu-item" id="select-outbreak"><span id="createq">Create a Query</span><span id="hideq" style="display:none">Hide Query Fields</span></a></li>
+    <li><a class="menu-item" id="select-outbreak"><span id="createq">Create a Query</span><span id="hideq" style="display:none">Hide Query Fields</span></a></li>
     <li style="color: #f89022">|</li>
     <li><a href="/" class="menu-item">Reset Query</a></li>
     <li style="color: #f89022">|</li>
