--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,6 +6,12 @@
   float: left;
   width: 45%;
   margin: 10px;
+
+}
+
+.basic-block.scrolling-list {
+  display: block;
+  border: solid lightgrey;
 }
 
 .hi-lite {
