--- a/app/assets/stylesheets/query.css.scss
+++ b/app/assets/stylesheets/query.css.scss
@@ -85,7 +85,7 @@
   margin: 5%;
   margin-top: 10px;
   // border-width: 5px;
-  border-color: #2D3440;
+  border-color: grey;
 }
 
 .scroll-background {
