--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,17 +1,21 @@
 
 
 
+
+
+.scrolling-list {
+  display: block;
+  height: 500px;
+  margin: auto;
+  border: solid green;
+  overflow: scroll;
+}
+
 .basic-block {
   display: inline-block;
   float: left;
   width: 45%;
   margin: 10px;
-
-}
-
-.basic-block.scrolling-list {
-  display: block;
-  border: solid lightgrey;
 }
 
 .hi-lite {
@@ -20,52 +24,4 @@
 
 .high-light-row {
   background-color: #ffd89b;
-}
-
-
-// #query-box {
-//   display: block;
-//   background-color: #2D3440;
-//   color: #FFBB34;
-//   padding: 2px;
-// }
-//
-// .query-form {
-//   width: 100%;
-//   z-index: 3;
-//   clear: both;
-//   // margin-left: 1%;
-//   // margin-right: 1%;
-//   // margin-top: 3px;
-//   background-color: white;
-//   color: black;
-//
-// }
-
-
-a.menu-item {
-  display: inline-block;
-  margin-left: 10px;
-  // float: left;
-  color: #FFBB34;
-}
-
-a.location-marker {
-  color: black;
-}
-
-.white-link {
-  display: inline-block;
-  color: #FFBB34;
-  padding-left: 5px;
-  float: left;
-
-}
-a:hover {
-  color: #ffee89;
-}
-
-#query-records {
-  overflow: scroll;
-  height: 150px;
 }
